--- a/package.json
+++ b/package.json
@@ -861,6 +861,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "scripts": {
+    "start": "react-scripts start"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
